change alert box to confirm

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     console.log("itemValue" + itemValue);
     console.log("quantity" + quantity);
     console.log("total" + total);
-    alert(total);
+    confirm("Transaction total is " + total);
   }
 
 </script>
