refactoring & preparing for taxcode

--- a/index.html
+++ b/index.html
@@ -11,20 +11,39 @@
 <form id="transactionValues" onsubmit="calculateValue()">
     Item Value: <input type="number" id="itemValue"><br>
     Quantity: <input type="number" id="quantity"><br>
+    Tax Code: <input type="text" id="taxCode"><br>
     <input type="submit" value="Calculate Total">
 </form> 
   
 <script>
+    var totalValue;
+    var taxToPay;
+
   function calculateValue() {
     let itemValue = document.getElementById("itemValue").value;
     let quantity = document.getElementById("quantity").value;
-    let total = itemValue * quantity;
-    console.log("itemValue" + itemValue);
-    console.log("quantity" + quantity);
-    console.log("total" + total);
-    confirm("Transaction total is " + total);
+    totalValue = itemValue * quantity;
+
+    
+    console.log("itemValue " + itemValue);
+    console.log("quantity " + quantity);
+    console.log("total " + totalValue);
+
+    calculateTax();
+    calculateGrandTotal(totalValue, taxToPay);
   }
 
+  function calculateTax() {
+    let taxCode = document.getElementById("taxCode").value;
+    console.log("taxcode " + taxCode);
+
+  }
+
+  function calculateGrandTotal() {
+
+    confirm("Transaction total: " + totalValue + ", Tax Code: " + taxCode);
+
+  }
 </script>
 
 
