fix tax code output

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   }
 
   function calculateTax() {
-    let taxCode = document.getElementById("taxCode").value;
+    taxCode = document.getElementById("taxCode").value;
     console.log("taxcode " + taxCode);
 
   }
