move js out into seperate file

--- a/index.html
+++ b/index.html
@@ -15,35 +15,8 @@
     <input type="submit" value="Calculate Total">
 </form> 
   
-<script>
-    var totalValue;
-    var taxToPay;
-
-  function calculateValue() {
-    let itemValue = document.getElementById("itemValue").value;
-    let quantity = document.getElementById("quantity").value;
-    totalValue = itemValue * quantity;
-
-    
-    console.log("itemValue " + itemValue);
-    console.log("quantity " + quantity);
-    console.log("total " + totalValue);
-
-    calculateTax();
-    calculateGrandTotal(totalValue, taxToPay);
-  }
-
-  function calculateTax() {
-    taxCode = document.getElementById("taxCode").value;
-    console.log("taxcode " + taxCode);
-
-  }
-
-  function calculateGrandTotal() {
-
-    confirm("Transaction total: " + totalValue + ", Tax Code: " + taxCode);
-
-  }
+<script src = "Calculator.js">
+   
 </script>
 
 
