changes with lance

--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 </script>
 <h1>Conqa Calculator</h1>
 
-<form id="transactionValues" onsubmit="calculateValue()">
+<form id="transactionValues" onsubmit="calculateValue()" action="#">
     Item Value: <input type="number" id="itemValue"><br>
     Quantity: <input type="number" id="quantity"><br>
     Tax Code: <input type="text" id="taxCode"><br>
     <input type="submit" value="Calculate Total">
 </form> 
   
-<script src = "Calculator.js">
-   
-</script>
+<script src = "calculator.js"></script>
 
 
 
