--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </script>
 <h1>Conqa Calculator</h1>
 
-<form id="transactionValues" onsubmit="calculateValue()" action="#">
+<form id="transactionValues" onsubmit="processTransaction()" action="#">
     Item Value: <input type="number" id="itemValue"><br>
     Quantity: <input type="number" id="quantity"><br>
     Tax Code: <input type="text" id="taxCode"><br>
